fixed some design issues with the container. it had a class of container so some of the css rules were being overriden by the boostrap class. I gave it an id of container and centered it in the page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
-  <div class="container">
+  <div id="container">
     <div class="row">
       <div class="col-sm-9">
         <h1>Twitch Streamers</h1>
@@ -25,7 +25,7 @@
       <span id="warning"></span>
     </div>
   </div>
-  
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="main.js"></script>
 </body>
