Created a new branch to delete the functionality of displaying the current stream if the twitch channel was currently streaming, since it was really glitchy.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link href="style.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet" />
 </head>
-<body>
+<body id="body">
   <div id="container">
     <div class="row">
       <div class="col-sm-9">
@@ -26,6 +26,7 @@
     </div>
   </div>
 
+  <script src="variables.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="main.js"></script>
 </body>
