added an enter key functionality

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html>
 <head>
   <title>Twitch Streamers</title>
@@ -22,7 +24,7 @@
     <div class="addStreamers">
       <input type="text" id="addStreamer" placeholder="Your streamer here"/>
       <button class="btn" id="streamerButton">Add streamer</button>
-      <span id="warning"></span>
+      <div id="warning"></div>
     </div>
   </div>
 
